--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,206 +1,256 @@
 
-<div>
-    <app-header></app-header>
-</div>
-
-<!--------------------------------------------- start new flowers  ------------>
-<section class='new_flowers'>
-   <div class="container">
-       <div class="row">
-           <div class="col-lg">
-               <div class="item wow fadeInLeft"   data-wow-offset='200'>       
-                <div class="cont_img"> <img src="../../../assets/imgs/new_flowers/1.jpg" alt=""></div>
-                <div class="info">
-                    <h2> new flowers </h2>
-                    <p> extra <sub>50</sub>% off</p>
+<!--=============================== strart header =======================-->
+<header>
+    <!--============================ start navbar  =========-->
+    <nav>
+        <div class="container">
+            <div class="row">
+                <div class="col col-md-3">
+                    <a class='logo'>
+                         <img  src="../../../assets/imgs/header/nav/log.PNG" alt="">
+                    </a>
                 </div>
-                <div class="over_1"></div>
-                <div class="over_2"></div>
-            </div>
-           </div>
-
-           <div class="col-lg">
-                <div class="item wow fadeInRight"   data-wow-offset='200'>
-                    <div class="cont_img"> <img src="../../../assets/imgs/new_flowers/2.jpg" alt=""></div>
-                    <div class="info">
-                        <h2 class='arr'> new arrivals </h2>
-                        <p> get up to <sub>50</sub>% off</p>
+                <div class="col col-md-9">
+                    <div class="bars d-sm-block d-lg-none"> 
+                        <i class="fas fa-bars open"></i>
+                   
+                        
                     </div>
-                    <div class="over_1"></div>
-                    <div class="over_2"></div>
-                </div>
-            </div>
-        </div>
-   </div>
-</section>
-<!--------------------------------------------- end new flowers   ------------>
 
- <!--------------------------------------------- start deals ------------>
-<section class='deals'>
-    <div class="container">
-        <div class="main_title text-center">
-            <p class='top_title'>  </p>
-            <h2> Deals Of The Week </h2>
-            <div class="under"> <span> </span> <i class="fas fa-certificate"></i> <span></span></div>
-        </div>
-        <div class="deal row">
-            <div class="col-lg">
-                <div class="cont_img hvr-curl-top-left ">
-                    <img src="../../../assets/imgs/deals/1.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-lg">
-                <div class="info">
-                    <div class="stars">
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <h3 class="name"> beauty flower </h3>
-                    <div class="salary"> 
-                        <span><i class="fas fa-dollar-sign"></i>16.01 </span> 
-                        <span><i class="fas fa-dollar-sign"></i>23.90</span>
-                    </div>
-                    <p class='lead'>
-                        You have a custom printing creative project?
-                        The vector graphic Mountain fox illustration can be
-                        used for printing purpose on any support, without size limitation
-                    </p>
-                    <div class="cont_button"> <button> shop now </button> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>  
- <!----------------------------------------------------- end deals -------------------->
-
-
-<!--------------------------------------------------- start best sals  ------------------>
-<section class='the_best'>
-    <div class="container">
-        <div class="main_title text-center">
-            <p class='top_title2'>  </p>
-            <h2> best selling products  </h2>
-            <div class="under"> <span> </span> <i class="fas fa-certificate"></i> <span></span></div>
-        </div>
-        <div class="items">
-            <owl-carousel-o [options]="customOptions" >
-                <ng-template carouselSlide *ngFor='let cart of cards; index as i'>
-                  <div class="slide">
-                    <div class="item">
-                        <span class='new'> {{cart.new_sale}} </span>
-                        <div class="cont_img">
-                            <img src="{{cart.img}}" alt="">
-                            <div class="overlay">
-                                <ul class='list-unstyled'>
-                                    <li><i class="fas fa-shopping-basket"></i></li>
-                                    <li><i class="fas fa-heart"></i></li>
-                                    <li><i class="far fa-eye"></i></li>
+                    <div class="list">
+                        <ul class="ul_list list-unstyled">
+                            <li class="d-sm-block d-lg-none"> <a href=""> <img style="width: 50px;"  src="../../../assets/imgs/header/nav/logo.svg" alt="">  </a></li>
+                            <li> <a href="#" data-scroll='#work'> work  </a> </li>
+                            <li> <a href="#" data-scroll='#services'> services </a> </li>
+                            <li> <a class="get" href="" data-scroll='#satrs'> get starts  </a> </li>
+                            <li class='d-sm-block d-lg-none'>
+                                <ul class="soical">
+                                    <li> <a href="#"> <i class="fab fa-facebook"></i>  </a>        </li>
+                                    <li> <a href="#"> <i class="fab fa-twitter-square"> </i> </a>  </li>
+                                    <li> <a href="#"> <i class="fab fa-instagram"></i>   </a>      </li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="description">
-                            <div class='div_1'>
-                                <div class="stars">  
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                </div>
-                                <div class="salary">  <i class="fas fa-dollar-sign"></i> {{cart.new_salary}}</div>
-                            </div>
-                            <div class='div_2'>
-                                <div class="name"> {{cart.name}}</div>
-                                <div class="salary"> <i class="fas fa-dollar-sign"></i> {{cart.old_salary}}</div>
-                            </div>
-                            <button> <i class="fas fa-shopping-basket"></i> add to cart </button>
-                        </div>
+                            </li>
+                            <li class='d-sm-block d-lg-none mail'> <a href="#"> projects@Mussada.info </a></li>
+                        </ul>
                     </div>
-                  </div>
-                </ng-template>
-            </owl-carousel-o>
+                </div>
+            </div>
         </div>
-    </div>
-</section>
-<!----------------------------------------------------- end best sals  ------------------->
+    </nav>
+    <!--============================ end navbar  =========-->
 
+    <div class="container">
+        <div class="row">
+            <img  class='my_img' src="../../../assets/imgs/header/back1.jpg" alt="">
+            <div class="col-md">
+                <div class="eg"></div>
+            </div>
+            <div class="col-md">
+                <div class="big">
+                    <div class="big_eg">
 
-
-<!----------------------------------------------------- start middel img   ------------------->
-<section class='middel_img'>
-   <div class="container">
-        <div class="item text-center wow jackInTheBox" data-wow-offset='250'>
-            <div class="cont_img">
-                <img src="../../../assets/imgs/middel_img/3.jpg" alt="">
-                <div class="over_1"></div>
-                <div class="over_2"></div>
+                    </div>
+                </div>
             </div>
             <div class="info">
-                <h2> beauty flower </h2>
-                <p> save up to  <sub>50</sub>% off</p>
+                <h2> Full service digital <span>agency</span> </h2>
+                <p class="lead"> Happiest when designing and developing award-winning digital products, apps and experiences </p>
+                <div class="buttons">
+                    <button class="one"> book a call </button>
+                    <button class="two"> learn more </button>
+                </div>
             </div>
         </div>
-   </div>
-</section>
-<!----------------------------------------------------- end middel img   ------------------->
+    </div>
+</header>
+<!--=============================== end  header   =======================-->
 
 
 
-<!--------------------------------------- start appoinment     ------------------------>
-<section class='appoinment'>
+
+<!--=============================== strart what we do  =======================-->
+<section class="what_we_do">
     <div class="container">
-        <div class="row">
-            <div class="col-lg">
+        <div class="title">
+            <p class='min_p'> waht we do </p>
+            <h1 class='_h1'> Strategy, design and development </h1>
+            <p class='big_p lead'> 
+                We help you to connect with your customers through incredible digital experiences. We love partnering with other agencies around design, development and digital.
+            </p>
+        </div>
+
+
+        <div class="row we_know">
+            <div class="the_col col_img col-lg">
+                <div class="cont_img">
+                    <img src="../../../assets/imgs/we_do/rocket_mobile.svg" alt="">
+                </div>
+            </div>
+            <div class="the_col col_info col-lg">
                 <div class="info">
-                    <div class="main_title text-center">
-                        <p class='top_title3'>  </p>
-                        <h2> Appointment </h2>
-                        <div class="under"> <span> </span> <i class="fas fa-certificate"></i> <span></span></div>
+                    <div class="title">
+                        <h2> We Know Digital </h2>
+                        <p class="lead"> Your customers expect amazing experience across all their devices, we know how to reach them. We provide the foundations to let you scale with speed and security.</p>
                     </div>
-                    <div class="description">
-                        <h2> want to make a booking or have a qusetion? </h2>
-                        <p class='lead'> Call me: <span>002-6666-8888</span> or fill out our online booking  equiry form and well contact you </p>
-                    </div>
-                    <div class="cont_button"> <button> make an appoinment </button> </div>
-                </div>
-            </div>
-            <div class="col-lg girl">
-                <div class="main_cont">
-                    <div class="cont_img"> 
-                        <img src="../../../assets/imgs/appoinment/girl_bocket.PNG" alt="">
-                        <div class="inside_border"></div>
+                    <div class="item">
+                        <div class="cont_img">
+                            <img src="../../../assets/imgs/we_do/Web_Icon.svg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3> Web Development </h3>
+                            <p> We love the Jamstack, GatsbyJS, NextJS, 11ty. We primarily work with React and Headless CMS tools, we’re happy working on Wordpress too. </p>
+                        </div>
                     </div>
 
+
+                    <div class="item">
+                        <div class="cont_img">
+                            <img src="../../../assets/imgs/we_do/Cross_Platform_Icon.svg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3> Research & Design </h3>
+                            <p> We speak to your customers, to your stakeholders, we work together to define KPIs. We abstract your product funnels, we see what converts, and what does not.The output is a clear plan, designs, and a direct path to your KPIs </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!--------------------------------------- end appoinment    ------------------------>
+<!--=============================== end  what we do   =======================-->
 
 
-<!--------------------------------------- start galary     ------------------------>
-<section class='galary'>
-    <div class="main_title text-center">
-        <p class='top_title4'>  </p>
-        <h2> Our galary </h2>
-        <div class="under"> <span> </span> <i class="fas fa-certificate"></i> <span></span></div>
-    </div>
+
+
+
+<!--=============================== strart our work   =======================-->
+<section class='our_work' id='work'>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-md-4 col-lg-3" *ngFor='let g of galary; index as i'>
-                <div class="item">
-                    <div class="cont_img "> <img class='hvr-grow' src="{{g.img}}" alt=""></div>
+        <div class="title text-center">
+            <button> our work </button>   
+        </div>
+        <div class="row row_one">
+            <div class="col-lg-7">
+                <div class="cont_img">
+                    <img src="../../../assets/imgs/our_work/covid2.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="info">
+                    <h2> covid-19 platform  </h2>
+                    <p> a real time platform share latest updates about covid-19</p>
+                    <button routerLink='covid'> view project </button> 
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row row_two">
+            <div class="col-lg-5 col_info">
+                <div class="info">
+                    <h2> ostazi platform   </h2>
+                    <p> educational place to find best teachers and book a class </p>
+                    <button routerLink='osatzi'> jingle away </button> 
+                </div>
+            </div>
+            <div class="col-lg-7 col_img">
+                <div class="cont_img">
+                    <img src="../../../assets/imgs/our_work/osatzi2.png" alt="">
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="row row_three">
+            <div class="col-lg-7">
+                <div class="cont_img">
+                    <img src="../../../assets/imgs/our_work/mota3.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="info">
+                    <h2> universal educational platform </h2>
+                    <p>  a place to share, download courses materials, community to communicate with university students and stuff </p>
+                    <button routerLink='motanaw3'> view project </button> 
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!--------------------------------------- end galary    ------------------------>
+<!--=============================== end our work  ===========================-->
 
-<div>
-    <app-footer></app-footer>
+
+
+
+
+<!--=============================== start services =======================-->
+<section class="services" id='services'>
+    <svg viewBox="0 0 1600 220" preserveAspectRatio="none"><path d="M918.34 99.41C388.23 343.6 47.11 117.12 0 87.54V220h1600V87.54c-221.28-164.25-522.68-60.13-681.66 11.87z"></path></svg>
+    <div class="body">
+        <div class="title text-center">
+            <h1> our services </h1>
+            <ul class="list-unstyled">
+                <li> <a href="#" class="a_two">  <span> websites </span> </a> </li>
+                <li> <a href="#" class="a_three">  <span> e-commerce </span> </a> </li>
+                <li> <a href="#" class="a_four">  <span> disign </span> </a> </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<!--===============================  end services  =======================-->
+
+
+
+
+
+
+<!--=============================== strart footer =======================-->
+<footer>
+    <div class="info">
+        <img src="../../../assets/imgs/header/nav/log.PNG" alt="">
+        <ul class="soical">
+            <li> <a href="#"> <i class="fab fa-facebook"></i>  </a>        </li>
+            <li> <a href="#"> <i class="fab fa-twitter-square"> </i> </a>  </li>
+            <li> <a href="#"> <i class="fab fa-instagram"></i>   </a>      </li>
+        </ul>
+        <ul class='keywords'>
+            <li> <a href="#"> Let’s Chat  </a></li>
+            <li> <a href="#"> Projects@mussada.com  </a></li>
+            <li> <a href="#"> Work  </a></li>
+            <li> <a href="#"> Services  </a></li>
+            <li> <a href="#"> Blog </a></li>
+        </ul>
+        <p class="text-center Copyright">Copyright © 2020 Mussada | Digital Agency &nbsp; </p>
+    </div>
+</footer>
+<!--=============================== end fooger =======================-->
+
+
+<!--*********************************************  start scroll to top ***********************************-->
+<div class="scroll_top">
+  <i class="fas fa-arrow-circle-up"></i>
 </div>
+<!--********************************************* end scroll to top **************************************-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
