--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
                             <li class="d-sm-block d-lg-none"> <a href=""> <img style="width: 50px;"  src="../../../assets/imgs/header/nav/logo.svg" alt="">  </a></li>
                             <li> <a href="#" data-scroll='#work'> work  </a> </li>
                             <li> <a href="#" data-scroll='#services'> services </a> </li>
-                            <li> <a class="get" href="" data-scroll='#satrs'> get starts  </a> </li>
+                            <li> <a class="get" href="" data-scroll='#satrs'> get startss  </a> </li>
                             <li class='d-sm-block d-lg-none'>
                                 <ul class="soical">
                                     <li> <a href="#"> <i class="fab fa-facebook"></i>  </a>        </li>
