--- a/src/app/shard/ostazi/ostazi.component.html
+++ b/src/app/shard/ostazi/ostazi.component.html
@@ -2,7 +2,7 @@
     <div class="container">
        <div class="title text-center">
            <h1>The Results</h1>
-           <p> Ostazi is a work in progress, the Invision demo can be seen </p>
+           <p> Ostazi is a work in progress, the Invision demo can be seen. </p>
            <button class="effect_button">
                <a href="http://ostazee.net/#/home"> Go Live Here  </a>
            </button>
