--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -86,7 +86,8 @@ header{
         @media(max-width:768px){
             width:100%;
             margin-left:0;
-            left:0
+            left:0;
+            top:10%;
         }
         h2{
             font-weight: bold;
