--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -25,6 +25,10 @@
             height: 50px;
             display: inline-block;
             border-radius: 13px;
+            @media(max-width:767px){
+                width: 150px;
+                height: 30px;
+            }
         }
         /*
         span{
