--- a/src/app/shard/motanaw3/motanaw3.component.html
+++ b/src/app/shard/motanaw3/motanaw3.component.html
@@ -1,8 +1,8 @@
 <section class="result">
     <div class="container">
        <div class="title text-center">
-           <h1>The Results</h1>
-           <p> Motanaw3 is a work in progress, the Invision demo can be seen </p>
+           <h1>The Results </h1>
+           <p> Motanaw3 is a work in progress, the Invision demo can be seen. </p>
            <button class="effect_button">
                <a href="https://motanawa.netlify.app/"> Go Live Here  </a>
            </button>
